appId: com.bspowercats.coach
---
- launchApp
- tapOn: "MORE"
- tapOn: "VIDEO"
- assertVisible: "VIDEO ANALYSIS"
- assertVisible: "PICK SWIMMERS"
- assertVisible:
    text: "hidden"
- tapOn: "BSPC Demo 05"
- assertVisible: "CAPTURE VIDEO"
